vhc1 vhc2 and ghost vhc

--- a/rosws/edgeweb.html
+++ b/rosws/edgeweb.html
@@ -62,9 +62,17 @@
     messageType : 'edge_info/vhc_geo'
   });
   geopoint.subscribe(function(message) {
-  console.log('Received message on vehicle ' + message.vhcid + ': [' + message.geo.latitude + ',' + message.geo.longitude + ',' + message.geo.altitude + ']');  
+  //console.log('Received message on vehicle ' + message.vhcid + ': [' + message.geo.latitude + ',' + message.geo.longitude + ',' + message.geo.altitude + ']');  
   });
 
+  var obs = new ROSLIB.Topic({
+    ros : ros,
+    name : '/obspoint',
+    messageType : 'edge_info/vhc_geo'
+  });
+  obs.subscribe(function(message) {
+  console.log('Vehicle '+ message.vhcid + ' finds obstacle '  + ': [' + message.geo.latitude + ',' + message.geo.longitude + ',' + message.geo.altitude + ']');  
+  });
 
   // Calling a service
   // -----------------
