--- a/rosws/edgeweb.html
+++ b/rosws/edgeweb.html
@@ -31,21 +31,19 @@
 
   var cmdVel = new ROSLIB.Topic({
     ros : ros,
-    name : '/vhc_status_msg',
-    messageType : 'std_msgs/String'
+    name : '/vhc_status_m',
+    messageType : 'edge_info/vhc_cmd'
   });
 
-  var start = new ROSLIB.Message({
-    data : "Start"
-  });
 
-  var stop = new ROSLIB.Message({
-    data : "Stop"
-  });
-
-  function cmdFunction(cmd){
-  cmdVel.publish(cmd);
-  console.log('Published command:' + cmd.data); 
+  function cmdFunction(cmdstring){
+    var id = parseInt(document.getElementById("cmdid").value);
+    var command = new ROSLIB.Message({
+      vhcid : id,
+      cmd : cmdstring
+    });
+  cmdVel.publish(command);
+  console.log('Published command: ' + command.cmd + " to vehicle " + command.vhcid); 
 }
 
 
@@ -71,12 +69,13 @@
   });
   */
   function setEnd(){
+    var id = parseInt(document.getElementById("id").value);
     var lat = document.getElementById("lat").value;
     var lon = document.getElementById("lon").value;
     var alt = document.getElementById("alt").value;
     console.log(lat);
     var end = new ROSLIB.Message({
-      vhcid : 1,
+      vhcid : id,
       geo:{
         latitude:parseFloat(lat),
         longitude : parseFloat(lon),
@@ -162,9 +161,17 @@
 
 <body>
   <h1>Edge Control</h1>
-  <p><button onclick="cmdFunction(start)">Start</button> 
-  <button onclick="cmdFunction(stop)">Stop</button> </p>
+  <p>
+    <input type ="int" id= "cmdid" size="1" value="1">
+  <button onclick="cmdFunction(1)">Start</button> 
+  <button onclick="cmdFunction(0)">Stop</button> </p>
   <p>Default:59.3367506,18.0707389,0.0</p>
-  <p> Vehicle 1:<input type ="double" id= "lat"><input type ="double" id= "lon"><input type ="double" id= "alt"><button onclick="setEnd()">Send</button> </p>
+  <form>
+  <p> Vehicle <input type ="int" id= "id" size="1" value="1">:  
+    <input type ="double" id= "lat" value="59.3367506">
+    <input type ="double" id= "lon" value="18.0707389">
+    <input type ="double" id= "alt" value="0.0">
+    <button onclick="setEnd()">Send</button> </p>
+  </form>
 </body>
 </html>
